<resources>
    <string name="app_name">FranticProduct</string>
    <string name="crash_text">Crash Report:</string>
    <string name="title_activity_task_create">TaskCreateActivity</string>
    <color name="drop_shadow">#10000000</color>
    <dimen name="rounded_corners">8.0dip</dimen>
    <string-array name="task_type">
        <item>Select</item>
        <item>Select</item>
        <item>Select</item>
        <item>Select</item>
        <item>Select</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_report">Reports</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="array_name">
        <item>Select</item>
    </string-array>
    <array name="delay_reason">
        <item>-Select-</item>
    </array>
    <string-array name="array_name1">
        <item>Select</item>
    </string-array>

    <style name="hintText" parent="TextAppearance.Design.Hint">
        <item name="android:textSize">12sp</item>
    </style>

    <string name="title_shop">Home</string>
    <string name="title_gifts">Projects</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Task</string>
    <string name="title_leave">Leave Approval</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_">Employee</string>
    <string name="btn_sign_up_email">Sign up with Email</string>
    <string name="btn_sign_in_email">Sign in with Email</string>
    <string name="btn_sign_in_fb">Welcome to Efor3</string>
    <string name="lbl_disclaimer">By signing in you agree to the&lt;br />&lt;a href=\"https://www.samleimobile.com/terms\">Terms&lt;/a> and &lt;a href=\"https://www.samleimobile.com/privacy\">Privacy Policy&lt;/a></string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="btn_login">Log In</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Your email address</string>
    <string name="lbl_phone">Your phone number</string>
    <string name="lbl_amount">Enter Amount or select from the plan</string>
    <string name="lbl_login">Log In</string>
    <string name="lbl_have_account">I already have an account!</string>
    <string name="lbl_have_coupons">or proceed to coupons!!</string>
    <string name="btn_done">Done</string>
    <string name="btn_continue">Continue</string>
    <string name="lbl_tailor_offers">(This helps us provide offers tailored to you)</string>
    <string name="lbl_password_length">Password (min 6 characters)</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_mobile_number">Enter mobile number</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_recharge_account">Recharge Mobile</string>
    <string name="lbl_processing_time">Approved amount will be added to your account. Receipts are typically processed within 48 hours.</string>
    <string name="lbl_you_just_claimed">You just claimed</string>
    <string name="lbl_password_reset">Password reset</string>
    <string name="lbl_remember_password">I remember my password!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_enter_email">Enter your email address</string>
    <string name="btn_back_to_login">Back to Login</string>
    <string name="lbl_reset_password_instruction_after">Click the link provided to reset your password.</string>
    <string name="lbl_password_reset_conf">"We've just sent a link to your
email address."</string>
    <color name="peter_pickle_bluewood">#ff344c60</color>
    <string name="title_activity_map">Map</string>

</resources>
