<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/home_nav"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_gifts"
        android:icon="@drawable/project_nav"
        android:title="@string/title_gifts" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/task_nav"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/timer"
        android:title="@string/title_attendance" />

    <item
        android:id="@+id/navigation_leave"
        android:icon="@drawable/employee_nav"
        android:title="@string/title_" />
</menu>