<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_refresh"
        android:title="@string/title_leave"
        android:icon="@drawable/noti_icon"
        android:orderInCategory="50"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_new"
        android:title="@string/title_gifts"
        android:icon="@drawable/approve_icon"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/profile"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />
</menu>