<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/action_bar_height" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <TextView
                style="@style/Title"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:text="@string/lbl_create_account" />

            <EditText
                android:id="@+id/input_first_name"
                style="@style/Input"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:hint="@string/lbl_first_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/input_last_name"
                style="@style/Input"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:hint="@string/lbl_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_email"
                style="@style/Input"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/input_phone"
                style="@style/Input"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:hint="@string/lbl_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_password"
                style="@style/Input"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:hint="@string/lbl_password_length"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                android:id="@+id/selectdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="Select Date"
                style="@style/ButtonLight"
                />

                <TextView
                    android:id="@+id/set_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_view_spacing"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:hint="select date"
                    android:textSize="@dimen/dp_22"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_35"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
           >
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/sex">
            <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:checked="true"
                    android:textSize="@dimen/dp_14"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:textSize="@dimen/dp_14"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_5">

                <Button
                    android:id="@+id/btn_done"
                    style="@style/ButtonLight"
                    android:layout_marginBottom="@dimen/default_view_spacing"
                    android:text="@string/btn_done" />

                <TextView
                    android:id="@+id/login"
                    style="@style/Link"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:text="@string/lbl_have_account" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/action_bar" />

</RelativeLayout>